Bug 521141 - Group running applications properly under shortcuts pinned to the taskbar. r=rstrong.